* io.c (rb_io_extract_modeenc): set ASCII-8BIT if binmode is specified   with opthash. [ruby-core:42197] [Bug #5917]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34358 b2dd03c8-39d4-4d8f-98ff-823fe69b080e